--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -12,5 +12,8 @@
     "dev": "For developers",
     "services": "Services",
     "finance": "Finance"
+  },
+  "footer": {
+    "copywriting": "© Travelpayouts, 2011–2019"
   }
 }
