Create Button components.

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -20,6 +20,9 @@
     "services": "Services",
     "finance": "Finance"
   },
+  "btn": {
+    "reset": "Reset"
+  },
   "footer": {
     "copywriting": "© Travelpayouts, 2011–2019"
   }
