Add filter to ServicesPage.
Create NoContent component.

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -27,6 +27,7 @@
   },
   "msg": {
     "getBonus": "You got the bonus :)",
+    "noBonuses": "There are no services",
     "promocodeCopied": "Promocode copied to buffer."
   },
   "footer": {
